[Add tmux over ssh - NOT TESTED!!]

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -102,6 +102,13 @@ set -g message-bg colour166
 set-option -g mouse on
 
 # }
+
+# SSH {
+
+bind-key b send-prefix
+
+# }
+
 # Customized keys {
 set -g terminal-overrides "screen*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
 unbind M-Up
