some customization + Changing vimdiff colorscheme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -110,7 +110,8 @@ bind-key b send-prefix
 # }
 
 # Customized keys {
-set -g terminal-overrides "screen*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
+#set -g terminal-overrides "screen*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
+set -g terminal-overrides "xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
 unbind M-Up
 unbind M-Down
 unbind M-Right
@@ -141,6 +142,10 @@ unbind n
 unbind p
 unbind o
 unbind x
+
+### above tmux 2.1
+
+####################################
 
 bind-key -n F1 select-window -t :0
 bind-key -n F2 select-window -t :1
